// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/pages/Document/ReportNeucentrix/Detail render 1`] = `
<React.Fragment>
  <Detail
    action={Promise {}}
    breadcrumb={
      Array [
        Object {
          "label": "Report Neucentrix",
          "url": "/report-neucentrix",
        },
        Object {
          "label": "-",
        },
      ]
    }
    filter={Array []}
    loading={false}
    notFound={true}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": undefined,
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "Report ID",
                    "name": "reportId",
                  },
                  Object {
                    "converter": [Function],
                    "label": "Upload Date",
                    "name": "createdAt",
                  },
                  Object {
                    "converter": [Function],
                    "label": "Last Update",
                    "name": "updatedAt",
                  },
                  Object {
                    "grid": 12,
                    "label": "Note",
                    "name": "note",
                  },
                ],
              },
              "title": "Company Detail",
              "type": "information",
            },
            Object {
              "properties": Object {
                "data": undefined,
                "nameKey": "companyName",
              },
              "title": "Company Name",
              "type": "numbering",
            },
            Object {
              "properties": Object {
                "data": undefined,
                "schema": Array [
                  Object {
                    "action": Object {
                      "children": "Reupload",
                      "onClick": undefined,
                    },
                    "file": true,
                    "label": "Monthly Report Doc",
                    "name": "documents",
                    "type": "PDF",
                  },
                ],
              },
              "title": "Document Attachment",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "active": 0,
                "errors": undefined,
                "steps": Array [
                  "Creating Report",
                  "Forwarded to WDM",
                  "Send to Customer",
                ],
              },
              "title": "Order Step",
              "type": "stepper",
            },
            Object {
              "properties": Object {
                "data": undefined,
              },
              "title": "History Work Log",
              "type": "worklog",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
          "stickRight": true,
        },
      ]
    }
    search={null}
    status={
      Object {
        "children": undefined,
        "variant": undefined,
      }
    }
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <Component
    id="id"
    modalAddCompany={false}
    onClose={[Function]}
  />
  <Component
    data={Object {}}
    id="id"
    modalReupload={false}
    onClose={[Function]}
  />
</React.Fragment>
`;

exports[`src/pages/Document/ReportNeucentrix/Detail render empty data 1`] = `
<React.Fragment>
  <Detail
    action={Promise {}}
    breadcrumb={
      Array [
        Object {
          "label": "Report Neucentrix",
          "url": "/report-neucentrix",
        },
        Object {
          "label": "-",
        },
      ]
    }
    filter={Array []}
    loading={true}
    notFound={true}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": undefined,
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "Report ID",
                    "name": "reportId",
                  },
                  Object {
                    "converter": [Function],
                    "label": "Upload Date",
                    "name": "createdAt",
                  },
                  Object {
                    "converter": [Function],
                    "label": "Last Update",
                    "name": "updatedAt",
                  },
                  Object {
                    "grid": 12,
                    "label": "Note",
                    "name": "note",
                  },
                ],
              },
              "title": "Company Detail",
              "type": "information",
            },
            Object {
              "properties": Object {
                "data": undefined,
                "nameKey": "companyName",
              },
              "title": "Company Name",
              "type": "numbering",
            },
            Object {
              "properties": Object {
                "data": undefined,
                "schema": Array [
                  Object {
                    "action": Object {
                      "children": "Reupload",
                      "onClick": undefined,
                    },
                    "file": true,
                    "label": "Monthly Report Doc",
                    "name": "documents",
                    "type": "PDF",
                  },
                ],
              },
              "title": "Document Attachment",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "active": 0,
                "errors": undefined,
                "steps": Array [
                  "Creating Report",
                  "Forwarded to WDM",
                  "Send to Customer",
                ],
              },
              "title": "Order Step",
              "type": "stepper",
            },
            Object {
              "properties": Object {
                "data": undefined,
              },
              "title": "History Work Log",
              "type": "worklog",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
          "stickRight": true,
        },
      ]
    }
    search={null}
    status={
      Object {
        "children": undefined,
        "variant": undefined,
      }
    }
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <Component
    id="id"
    modalAddCompany={false}
    onClose={[Function]}
  />
  <Component
    data={Object {}}
    id="id"
    modalReupload={false}
    onClose={[Function]}
  />
</React.Fragment>
`;

exports[`src/pages/Document/ReportNeucentrix/Detail render loading 1`] = `
<React.Fragment>
  <Detail
    action={Promise {}}
    breadcrumb={
      Array [
        Object {
          "label": "Report Neucentrix",
          "url": "/report-neucentrix",
        },
        Object {
          "label": "-",
        },
      ]
    }
    filter={Array []}
    loading={true}
    notFound={true}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": undefined,
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "Report ID",
                    "name": "reportId",
                  },
                  Object {
                    "converter": [Function],
                    "label": "Upload Date",
                    "name": "createdAt",
                  },
                  Object {
                    "converter": [Function],
                    "label": "Last Update",
                    "name": "updatedAt",
                  },
                  Object {
                    "grid": 12,
                    "label": "Note",
                    "name": "note",
                  },
                ],
              },
              "title": "Company Detail",
              "type": "information",
            },
            Object {
              "properties": Object {
                "data": undefined,
                "nameKey": "companyName",
              },
              "title": "Company Name",
              "type": "numbering",
            },
            Object {
              "properties": Object {
                "data": undefined,
                "schema": Array [
                  Object {
                    "action": Object {
                      "children": "Reupload",
                      "onClick": undefined,
                    },
                    "file": true,
                    "label": "Monthly Report Doc",
                    "name": "documents",
                    "type": "PDF",
                  },
                ],
              },
              "title": "Document Attachment",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "active": 0,
                "errors": undefined,
                "steps": Array [
                  "Creating Report",
                  "Forwarded to WDM",
                  "Send to Customer",
                ],
              },
              "title": "Order Step",
              "type": "stepper",
            },
            Object {
              "properties": Object {
                "data": undefined,
              },
              "title": "History Work Log",
              "type": "worklog",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
          "stickRight": true,
        },
      ]
    }
    search={null}
    status={
      Object {
        "children": undefined,
        "variant": undefined,
      }
    }
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <Component
    id="id"
    modalAddCompany={false}
    onClose={[Function]}
  />
  <Component
    data={Object {}}
    id="id"
    modalReupload={false}
    onClose={[Function]}
  />
</React.Fragment>
`;

exports[`src/pages/Document/ReportNeucentrix/Detail render status send to customer 1`] = `
<React.Fragment>
  <Detail
    action={Promise {}}
    breadcrumb={
      Array [
        Object {
          "label": "Report Neucentrix",
          "url": "/report-neucentrix",
        },
        Object {
          "label": "-",
        },
      ]
    }
    filter={Array []}
    loading={true}
    notFound={true}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": undefined,
                "schema": Array [
                  Object {
                    "grid": 12,
                    "label": "Report ID",
                    "name": "reportId",
                  },
                  Object {
                    "converter": [Function],
                    "label": "Upload Date",
                    "name": "createdAt",
                  },
                  Object {
                    "converter": [Function],
                    "label": "Last Update",
                    "name": "updatedAt",
                  },
                  Object {
                    "grid": 12,
                    "label": "Note",
                    "name": "note",
                  },
                ],
              },
              "title": "Company Detail",
              "type": "information",
            },
            Object {
              "properties": Object {
                "data": undefined,
                "nameKey": "companyName",
              },
              "title": "Company Name",
              "type": "numbering",
            },
            Object {
              "properties": Object {
                "data": undefined,
                "schema": Array [
                  Object {
                    "action": Object {
                      "children": "Reupload",
                      "onClick": undefined,
                    },
                    "file": true,
                    "label": "Monthly Report Doc",
                    "name": "documents",
                    "type": "PDF",
                  },
                ],
              },
              "title": "Document Attachment",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "active": 0,
                "errors": undefined,
                "steps": Array [
                  "Creating Report",
                  "Forwarded to WDM",
                  "Send to Customer",
                ],
              },
              "title": "Order Step",
              "type": "stepper",
            },
            Object {
              "properties": Object {
                "data": undefined,
              },
              "title": "History Work Log",
              "type": "worklog",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
          "stickRight": true,
        },
      ]
    }
    search={null}
    status={
      Object {
        "children": undefined,
        "variant": undefined,
      }
    }
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <Component
    id="id"
    modalAddCompany={false}
    onClose={[Function]}
  />
  <Component
    data={Object {}}
    id="id"
    modalReupload={false}
    onClose={[Function]}
  />
</React.Fragment>
`;
